Project user_cart_order_payment_data {
  database_type: "MySQL"
  Note: "ERD section for User, Cart, Order, and Payment Data."
}

Table account {
  account_id int [pk, increment]
  phone_number varchar(20) [unique, not null]
  password varchar(255) [not null]
  role varchar(50)
  email varchar(100)
  first_name varchar(50)
  last_name varchar(50)
  gender bit
  enabled bit
}

Table account_address {
  address_id int [pk, increment]
  account_id int [not null]
  full_name varchar(100) [not null]
  phone varchar(20) [not null]
  address varchar(255) [not null]
  is_default bit
}

Table product {
  product_id int [pk, increment]
  product_name varchar(255) [not null]
  price decimal(15,0) [not null]
  inventory_quantity int
}

Table cart {
  cart_id int [pk, increment]
  account_id int [not null]
  status varchar(50)
  updated_date date
}

Table cart_item {
  cart_item_id int [pk, increment]
  cart_id int [not null]
  product_id int [not null]
  quantity int
  is_selected bit [not null]
  is_build_item bit [not null]
  build_id varchar(50)
}

Table orders {
  order_id bigint [pk, increment]
  account_id int [not null]
  final_amount decimal(15,0)
  status varchar(50)
  created_date date
  shipping_method varchar(50) [not null]
  note text
  shipping_full_name varchar(100) [not null]
  shipping_phone varchar(20) [not null]
  shipping_address varchar(255) [not null]
  ready_to_ship_date datetime
  shipment_received_date datetime
  payment_id varchar(255)
  payment_status varchar(50)
  paid_at datetime
}

Table order_detail {
  order_detail_id int [pk, increment]
  order_id bigint [not null]
  product_id int [not null]
  quantity int [not null]
  price decimal(15,0) [not null]
}

Table payments {
  payment_id bigint [pk, increment]
  order_id bigint [not null]
  gateway_payment_id varchar(255)
  amount decimal(15,0)
  currency varchar(10)
  status varchar(50)
  raw_payload text
  created_at datetime
  updated_at datetime
  order_code bigint [unique]
}

Ref: account_address.account_id > account.account_id [delete: cascade]
Ref: cart.account_id > account.account_id [delete: cascade]
Ref: cart_item.cart_id > cart.cart_id [delete: cascade]
Ref: cart_item.product_id > product.product_id
Ref: orders.account_id > account.account_id
Ref: order_detail.order_id > orders.order_id [delete: cascade]
Ref: order_detail.product_id > product.product_id
Ref: payments.order_id > orders.order_id [delete: cascade]
